# google-drive-to-cloudstorage-tool

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/gdrive_to_gcs/: __init__.py  auth.py  cli.py  config.py  drive.py  exceptions.py  gcs.py  transfer.py
src/gdrive_to_gcs/tui/: __init__.py  app.py  screens.py  styles.tcss  widgets.py
